fix overflow

--- a/src/view/layout/drawer/drawer.css
+++ b/src/view/layout/drawer/drawer.css
@@ -6,6 +6,7 @@
     transform: translateX(100%);
     transition: transform 0.3s ease;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    overflow-y:auto;
 }
 
 .drawer.open {
